[tool.poetry]
name = "thorlabs-ell9k-ctrl"
version = "0.1.0"
description = "Server for controlling the Thorlabs ELL9K filter slider"
authors = ["Michael Marti <micmarti@ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
websockets = ">9.0"
pyserial = ">1.0"
numpy = ">1.0"
tiqi-rpc = {git = "git@gitlab.phys.ethz.ch:tiqi-projects/tiqi-rpc-python.git", develop = true}
tiqi-plugin = {git = "git@gitlab.phys.ethz.ch:tiqi-projects/tiqi-plugin.git", develop = true}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
